--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -429,7 +429,7 @@
                     {% endfor %}
                   </div>
 
-
+{% comment %}
                      <!-- Assinante -->
                   <div class="form-group terms-cond">
                     <label for="terms" id="assinante-check">
@@ -438,7 +438,7 @@
                     </label>
                     <a href="javascript:void(0);" id="btn-explicacao" class="assinante-link">?</a>
                   </div>
-
+{% endcomment %}
 
                   <!-- Termos -->
                   <div class="form-group terms-cond">
