--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -377,7 +377,7 @@
     </div>
     {% endif %}
 
-
+{% comment %}
    <!-- Modal Assinatura -->
     <div id="assinatura-confirm" class="modal fade">
         <div class="modal-dialog">
@@ -399,6 +399,7 @@
             </div>
         </div>
     </div>
+{% endcomment %}
 
     <!-- Loading basta dar display block-->
     <div class="loading" style="display: none;">{% trans "Carregando" %}...</div>
