--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -267,9 +267,9 @@
                 <div class="col-md-4">
                     <span class="copyright">{% trans "Copyright &copy; Vendedor Online 2017" %}</span>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3"><!--
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
-                        <img src="/static/img/logo-en-maior.png" width="20px" /> by {% trans "PrepShip Tool" %}</a>
+                        <img src="/static/img/logo-en-maior.png" width="20px" /> by {% trans "PrepShip Tool" %}</a>-->
                 </div>
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
