Ajuste ordenacao do menu

--- a/html/templates/detalhe_envio_brasil.html
+++ b/html/templates/detalhe_envio_brasil.html
@@ -240,7 +240,7 @@
                             <a href="javascript:void(0);" class="btn btn-warning edit-pdf"><i class="fa fa-fw fa-pencil-square-o"></i> Alterar</a>
                         </div>
                         <div class="input-content-edit-pdf"><br>
-                            <input class="form-control input-70" id="pdf-edit" name="pdf-edited" aria-required="true" type="file" />
+                            <input class="form-control custom-file-input input-70" id="pdf-edit" name="pdf-edited" aria-required="true" type="file">
                             <a href="javascript:void(0);" class="btn btn-default edit-pdf-undo"><i class="fa fa-fw fa-undo"></i></a>
                         </div>
                     </div>
