--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -1839,7 +1839,59 @@ footer.fixed-footer{
 @media (max-width: 767px){
 
     .sistema .navbar-brand img:first-child{
-        margin-top: -2px;
+        margin-top: 10px;
+    }
+
+    .sistema .navbar-brand img:last-child{
+        display: none;
+    }
+
+    .page-header{
+        margin-top: 0;
+    }
+
+    .box-container-lote {
+        width: 100%;
+    }
+
+    .box-lote img {
+        width: 100%;
+        height: 200px;
+    }
+
+    .valor-prod {
+        font-size: 25px;
+    }
+
+    .box-lote span {
+        margin: 15px 0 0px 5px;
+    }
+
+    .lucro-prod {
+        font-size: 16px;
+    }
+
+    .box-lote.vendido .vendido-text {
+        width: 100%;
+        font-size: 26px;
+    }
+
+    .box-lote h6, .filtros h6, .filtros-box label {
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    .sistema .bandeira {
+        top: 65px;
+        right: 44px;
+    }
+
+    .banner-lote h2 {
+        width: 100%;
+    }
+
+    .banner-lote h2:nth-child(3){
+        display: none;
     }
 
     .navbar-brand {
