descrição das alterações nos detalhes.
- ignore dos campos hidden que não devem ser validados
- ajuste no nome do campo rank que mudou para average_rank
- acerto no retorno da etapa 1 em um envio correto
- ajuste na ordenação da lista de lotes
- acerto na criação dos produtos comprados do lote no estoque do usuário

--- a/html/templates/store_purchase.html
+++ b/html/templates/store_purchase.html
@@ -59,7 +59,7 @@
                   <td class="center">{{ lot.sell_date|date:'SHORT_DATE_FORMAT' }}</td>
                   {% endtimezone %}
                   <td class="center">{{ lot.average_roi|localize }}%</td>
-                  <td class="center">{{ lot.rank }}%</td>
+                  <td class="center">{{ lot.average_rank|localize }}%</td>
                   <td class="center">
                       <a class="download" href="{% url 'store_lot_details' lot.id %}"><i class="fa fa-pencil"></i> {% trans "Detalhe" %}</a>
                   </td>
