--- a/html/templates/product_stock.html
+++ b/html/templates/product_stock.html
@@ -1,6 +1,6 @@
 {% extends 'includes/layout.html' %}
 {% load i18n permissions products users shipments commons %}
-{% block listaprodutos %}active{% endblock %}
+{% block productlist %}active{% endblock %}
 
 {% block conteudo %}
 
