--- a/html/templates/store_purchase.html
+++ b/html/templates/store_purchase.html
@@ -1,6 +1,6 @@
 {% extends 'includes/layout.html' %}
 {% load i18n tz l10n commons %}
-{% block lotes-u %}active{% endblock %}
+{% block mypurchases %}active{% endblock %}
 
 {% block conteudo %}
 
