--- a/html/templates/shipment_list.html
+++ b/html/templates/shipment_list.html
@@ -1,6 +1,6 @@
 {% extends 'base_shipment_list.html' %}
 {% load i18n permissions users shipments commons %}
-{% block listashipment %}active{% endblock %}
+{% block shipmentlist %}active{% endblock %}
 
 {% block list_title %}<h1 class="page-header"><i class="fa fa-archive"></i> {% trans "Lista de Envios" %}</h1>{% endblock %}
 
