--- a/html/templates/store_list.html
+++ b/html/templates/store_list.html
@@ -1,6 +1,6 @@
 {% extends 'includes/layout.html' %}
 {% load i18n l10n permissions users commons %}
-{% block lotes-u %}active{% endblock %}
+{% block storelist %}active{% endblock %}
 
 {% block conteudo %}
     <div class="banner-lote">
