ajuste do posicionamento do aviso de envios em aberto.

--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -225,7 +225,7 @@
                                         {% endif %}
                                     </a>
                                 </li>
-                                <li class="divider"></li>
+                                <li class="divider-fix divider"></li>
                             {% endif %}
                             <li class="{% block mypurchases %}{% endblock %}">
                                 <a href="{% url 'store_purchase' %}"><i class="fa fa-fw fa-shopping-basket"></i> {% trans "Minhas compras" %}</a>
