--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -862,10 +862,15 @@ body {
     font-weight: normal;
 }
 
+.dropdown-menu li.divider-fix{
+    overflow: inherit;
+}
+
 .suspenso{
-    position: absolute;
-    top: 42px;
-    left: 143px;
+    float: left;
+    position: relative;
+    top: -29px;
+    left: 126px;
     background: #c9302c;
     color: #fff;
     font-weight: bold;
